--- a/labs/ex08/template/ex08.ipynb
+++ b/labs/ex08/template/ex08.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Useful starting lines\n",
+    "#Useful starting lines\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -103,6 +103,12 @@
     "    # INSERT YOUR CODE HERE\n",
     "    # TODO: build distance matrix\n",
     "    # ***************************************************\n",
+    "    dist = [[numpy.linalg.norm(data[i:]-mu[k:]) for k in mu.shape[0]] for i in data.shape[0]]\n",
+    "    distm = np.matrix(dist)\n",
+    "    assert distm.shape[1] == mu.shape[0]\n",
+    "    assert distm.shape[0] == data.shape[0]\n",
+    "    return distm\n",
+    "    #numpy.linalg.norm(a-b)\n",
     "    raise NotImplementedError"
    ]
   },
@@ -128,6 +134,11 @@
     "        assignments: assignments vector z with shape (num_shapes, 1)\n",
     "        mu: mean vector mu with shape (k, num_features)\n",
     "    \"\"\"\n",
+    "    dist = build_distance_matrix(data,mu_old)\n",
+    "    z = np.argmax(dist,axis=1)\n",
+    "    assert = z.shape[0] = data.shape[0]\n",
+    "    assert z.shape[1] = 1s\n",
+    "    \n",
     "    # ***************************************************\n",
     "    # INSERT YOUR CODE HERE\n",
     "    # TODO: update kmeans parameters\n",
@@ -292,9 +303,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
